1.0.12    fix for Android/Chrome that have unidentified as key property for single character keys
          fix entering text in the middle on Android/Chrome
          fix backspace on Android/Chrome/SwiftKey
          fix cursor position when click on word completion on Android
1.0.11    fix dead keys logic (for special keys that don't trigger keypress like delete)
1.0.9/10  fix dead_keys logic (when keypress after special keys like arrows)
1.0.8     fix paste in IE and Edge
1.0.7     fix exec when pause called in onInit
          fix reverse search
          fix 3 argument in completion error
          fix login from hash for async JSON-RPC
          fix focus(false)/disable in exec from hash
          fix regression of pasting in MacOS
          scroll to bottom in insert method
          remove default extra property from interpreter (all properties are saved in interperter)
          and make main options extra pass to intepterer not using extra property
          fix completion when text have spaces (escaped or inside quotes)
          fix dead keys on MacOSX (testing shortcuts now require keydown and keypress events)
1.0.6     fix AltGr on non US keyboard layouts
1.0.5     fix CTRL+D to delete forward one character
          don't use user agent sniffing to get scroll element if terminal attached to body
          fix & on French layout
1.0.3/4   fix keypress with key polyfill
1.0.2     fix CTRL+V in Firefox and IE
          fix issue in jQuery >= 3.0
          fix space, backspace, resize and arrows in IE
          fix middle mouse paste on GNU/Linux
1.0.1     fix signature
1.0.0     copy to system clipboard when copy to kill area
          simplify changing of terminal colors using css variables
          always export history and import when importHistory option is true
          add bar and underline cursor animations and a way to enable it with single css variable
          recalcualate cols and rows on terminal resize (not only window)