@@ -1,3 +1,4 @@
+next      fix moving of the content on focus when command line at the bottom
 1.0.12    fix for Android/Chrome that have unidentified as key property for single character keys
           fix entering text in the middle on Android/Chrome
           fix backspace on Android/Chrome/SwiftKey
